# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  README.md  env.example  install.sh
config/: .gitconfig  .mcp.json  .mcp.json.erb  .tmux.conf  .zshrc  .zshrc.Linux  emacs.ahk  (+2 more)
config/.config/karabiner/: Makefile  karabiner.json  pyproject.toml
config/.config/karabiner/assets/complex_modifications/: myemacs.json  old.json  tyaba_emacs.json
config/.config/karabiner/automatic_backups/: karabiner_20240130.json  karabiner_20240131.json  karabiner_20240202.json  karabiner_20240301.json  karabiner_20240302.json  karabiner_20240303.json  karabiner_20240304_broken.json  karabiner_20240324.json  karabiner_20241010.json
config/.config/karabiner/notebooks/: tmp.ipynb
config/.config/karabiner/old/: keymap_generator.py  settings.py
config/.config/karabiner/src/: helpers.py  keymap_generator.py  pyproject.toml  settings.py
config/.config/karabiner/src/keymap_generator/: settings.py
config/.config/karabiner/src/keymap_generator/app/: generate_keymap.py  injector.py
config/.config/karabiner/src/keymap_generator/domain/models/: keymap.py  manipulator.py
config/.config/karabiner/src/keymap_generator/domain/services/: keymap_generator.py
config/.config/karabiner/src/keymap_generator/infra/services/: keymap_generator.py
config/.config/karabiner/src/keymap_generator/usecase/: generate_emacs_keymap.py
config/.config/karabiner/src/keymap_generator/usecase/rules/: alt.py  ctrl.py  ctrl_x.py  decorators.py  original.py
config/.config/karabiner/src/keymap_generator/utils/: file.py
(+181 files in other folders)
